--- a/secondwindow.ui
+++ b/secondwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>408</width>
+    <height>320</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,14 +16,14 @@
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>30</y>
+     <x>50</x>
+     <y>120</y>
      <width>301</width>
-     <height>221</height>
+     <height>171</height>
     </rect>
    </property>
    <property name="title">
-    <string>SignIn</string>
+    <string>Sign-In</string>
    </property>
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
@@ -82,6 +82,19 @@
      <string>Login</string>
     </property>
    </widget>
+  </widget>
+  <widget class="QLabel" name="label_image_2">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>10</y>
+     <width>381</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
   </widget>
  </widget>
  <resources/>
